k8s/eureka-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert --build local -v -f ../docker-compose.yaml
    kompose.version: 1.36.0 (HEAD)
  labels:
    io.kompose.service: eureka
  name: eureka
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: eureka
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert --build local -v -f ../docker-compose.yaml
        kompose.version: 1.36.0 (HEAD)
      labels:
        io.kompose.service: eureka
    spec:
      containers:
        - env:
            - name: EUREKA_CLIENT_FETCH_REGISTRY
              value: "false"
            - name: EUREKA_CLIENT_REGISTER_WITH_EUREKA
              value: "false"
            - name: SERVER_PORT
              value: "8761"
            - name: SPRING_APPLICATION_NAME
              value: eureka
          image: eureka
          name: eureka
          ports:
            - containerPort: 8761
              protocol: TCP
      restartPolicy: Always
