k8s/eureka-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert --build local -v -f ../docker-compose.yaml
    kompose.version: 1.36.0 (HEAD)
  labels:
    io.kompose.service: eureka
  name: eureka
spec:
  ports:
    - name: "8761"
      port: 8761
      targetPort: 8761
  selector:
    io.kompose.service: eureka
