k8s/hello-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert --build local -v -f ../docker-compose.yaml
    kompose.version: 1.36.0 (HEAD)
  labels:
    io.kompose.service: hello-service
  name: hello-service
spec:
  ports:
    - name: "8081"
      port: 8081
      targetPort: 8081
  selector:
    io.kompose.service: hello-service
